<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_delete_leftover"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ebavery.leftovers.DeleteLeftover">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnKeep"
        android:text="@string/btnKeep"

        android:layout_centerHorizontal="true"
        style="@style/ButtonStyle"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/btnThrewAway"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnThrewAway"
        android:text="@string/btnThrewAway"
        style="@style/ButtonStyle"
        android:textColor="@color/colorTertiary" android:layout_marginTop="10dp"
        android:layout_below="@+id/btnAte"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAte"
        android:text="@string/btnAte"
        android:layout_centerHorizontal="true"
        style="@style/ButtonStyle"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/txtLeftoverToDelete" android:layout_marginTop="10dp"/>
    <TextView
        android:text="@string/txtEye"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_alignParentTop="true"
        android:id="@+id/textView" android:textAlignment="center"
        android:textColor="@color/colorTertiary" android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/txtLeftoverToDelete"
        android:textSize="24sp" android:textColor="@color/colorPrimary"
        android:textStyle="normal|bold"
        android:layout_centerHorizontal="true" android:layout_below="@+id/textView"/>
</RelativeLayout>
