<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_initialize"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ebavery.leftovers.Initialize">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtInitialization"
        android:text="@string/txtInitialize"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:textSize="24sp"
        android:textColor="@color/colorPrimaryDark"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp" android:textStyle="normal|bold"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:layout_below="@id/txtInitialization"
        android:id="@+id/tableLayout">
        <TableRow>
            <TextView
                android:text="@string/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                android:id="@+id/txtName"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"

                android:id="@+id/eTname" android:textColor="?attr/colorPrimary"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/txtDiet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="42dp"
                android:id="@+id/txtDiet" android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:id="@+id/spinDiet"
                android:gravity="bottom" android:layout_gravity="bottom"/>
        </TableRow>
    </TableLayout>

    <Button
        android:text="@string/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnInitialize" style="@style/ButtonStyle"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/tableLayout"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
